PHP's: actuTeh y elimiTech, renovados

--- a/app/src/main/res/layout/activity_crud_tecnicos.xml
+++ b/app/src/main/res/layout/activity_crud_tecnicos.xml
@@ -31,6 +31,7 @@
         android:fontFamily="@font/amaranth"
         android:hint="Usuario:"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="20sp"
@@ -50,6 +51,7 @@
         android:fontFamily="@font/amaranth"
         android:hint="Puesto:"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="20sp"
@@ -69,6 +71,7 @@
         android:fontFamily="@font/amaranth"
         android:hint="Apellidos:"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="20sp"
@@ -88,6 +91,7 @@
         android:fontFamily="@font/amaranth"
         android:hint="Nombre:"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="20sp"
@@ -107,6 +111,7 @@
         android:fontFamily="@font/amaranth"
         android:hint="Contraseña:"
         android:inputType="textPassword"
+        android:minHeight="48dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="20sp"
