--- a/app/src/main/res/layout/activity_menu_tecnico.xml
+++ b/app/src/main/res/layout/activity_menu_tecnico.xml
@@ -7,6 +7,18 @@
     android:background="@drawable/master4"
     tools:context=".MenuTecnico">
 
+    <Button
+        android:id="@+id/btnCerrarSesionTecnico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cerrar Sesion"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.991" />
+
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="26dp"
